# ND209

./: README.md
lessons/localization/: CMakeLists.txt  gaussian_1d.cpp  kalman_1d.cpp  kalman_md.cpp  notes.tex  questions.tex  state_prediction.cpp
lessons/localization/kalman_filters/: CMakeLists.txt  measurement_update.cpp
lessons/localization/lab_kalman_filters/: EKFLab.rviz  RvizLaunch.launch  rqt_multiplot_xypose.xml
lessons/localization/monte_carlo_localization/: CMakeLists.txt  app  bayes_practice.cpp  robot_mcl.cpp
lessons/mapping_and_slam/: CMakeLists.txt  fastSlamConfig.rviz  fastSlamPartialMap.yaml  notes.tex  occupancy_grid_mapping.cpp  sensor_fusion.cpp
lessons/path_planning_and_navigation/: CMakeLists.txt  bfs.cpp  minkowski_sum.cpp  questions.tex  search.cpp
lessons/ros_essentials/first_package/: package.xml
projects/build_my_world/script/: welcome.cpp
projects/go_chase_it/: README.md
projects/go_chase_it/ball_chaser/: CMakeLists.txt  package.xml
projects/home_service_robot/: README.md
projects/home_service_robot/add_markers/: CMakeLists.txt  package.xml
projects/home_service_robot/maps/: earthquake_slam.pgm  earthquake_slam.yaml  home_slam.pgm  home_slam.yaml  my_world_simple_pgmcreator.yaml  my_world_simple_slam.pgm  my_world_simple_slam.yaml
projects/home_service_robot/pick_objects/: CMakeLists.txt  package.xml
projects/home_service_robot/rvizConfig/: configuration.rviz
projects/home_service_robot/scripts/: add_marker.sh  home_service.sh  launch.sh  pick_objects.sh  test_navigation.sh  test_slam.sh
projects/home_service_robot/worlds/: home.world  my_world_simple.world
(+63 files in other folders)
